# message_bus

./: README.md  docker-compose.yaml  pyproject.toml
src/: bus_framework.py  logger.py  main.py
src/apps/users/domain/: user.py
src/apps/users/domain/repositories/: users_repository.py
src/apps/users/usecases/: __init__.py  create_new_user.py  new_user_created.py
src/core/: base_abstractions.py  bus.py  bus_framework.py  exceptions.py
src/persistence/: inmemory_persistence.py
src/transport/: rabbitmq_transport.py
src/transport/rabbitmq/: __init__.py  consumer.py  handlers.py  producer.py
